Feat(django): Add Django implementation for benchmark
- Django 5.x + DRF + Gunicorm (sync WSGI)
- All 8 benchamrk endpoints implemented
- managed=False for shared PostgreSQL table
- Docker profile: django

--- a/implementations/docker-compose.yml
+++ b/implementations/docker-compose.yml
@@ -26,5 +26,18 @@ services:
       postgres:
         condition: service_healthy
 
+  python-django:
+    build: ./python-django
+    profiles: ["django"]
+    ports:
+      - "8000:8000"
+    environment:
+      - DB_HOST=postgres
+      - DB_NAME=benchmark
+      - DB_USER=benchmark
+      - DB_PASSWORD=benchmark
+    depends_on:
+      postgres:
+        condition: service_healthy
 volumes:
   postgres_data:
