Add resource limits to docker-compose for fair benchmarking
- postgres: 2 CPUs, 1GB memory
- python-fastapi-pragmatic: 2 CPUs, 2GB memory
- python-django: 2 CPUs, 2GB memory

--- a/implementations/docker-compose.yml
+++ b/implementations/docker-compose.yml
@@ -14,6 +14,11 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    deploy:
+      resources:
+        limits:
+          cpus: "2"
+          memory: 1G
 
   python-fastapi-pragmatic:
     build: ./python-fastapi-pragmatic
@@ -25,6 +30,11 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: "2"
+          memory: 2G
 
   python-django:
     build: ./python-django
@@ -39,5 +49,10 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: "2"
+          memory: 2G
 volumes:
   postgres_data:
