--- a/implementations/python-fastapi-strict/pyproject.toml
+++ b/implementations/python-fastapi-strict/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "asyncpg>=0.31.0",
+    "email-validator>=2.3.0",
     "fastapi>=0.124.0",
     "pydantic>=2.12.5",
     "python-multipart>=0.0.20",
