Feat(express): Add typescript express implementation - Refactor(scenario): Change config file's path as to match with current scenario files

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 docs/
 results/
 .DS_Store
+node_modules/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -209,3 +210,6 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Prisma
+**/generated/prisma/
