--- a/implementations/python-fastapi-pragmatic/pyproject.toml
+++ b/implementations/python-fastapi-pragmatic/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "python-multipart>=0.0.20",
+    "redis>=7.1.0",
     "sqlalchemy[asyncio]>=2.0.44",
     "uvicorn[standard]>=0.38.0",
 ]
