--- a/implementations/python-fastapi-pragmatic/pyproject.toml
+++ b/implementations/python-fastapi-pragmatic/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "httpx>=0.28.1",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
     "redis>=7.1.0",
     "sqlalchemy[asyncio]>=2.0.44",
