Chore: Start ruby on rails implementation

--- a/implementations/docker-compose.yml
+++ b/implementations/docker-compose.yml
@@ -131,6 +131,25 @@ services:
         limits:
           cpus: "2"
           memory: 2G
+  ruby-rails:
+    build: ./ruby-rails
+    profiles: ["rails"]
+    ports:
+      - "8000:8000"
+    environment:
+      DATABASE_URL: postgresql://benchmark:benchmark@postgres:5432/benchmark
+      RAILS_ENV: production
+      RAILS_LOG_TO_STDOUT: "true"
+      SECRET_KEY_BASE: benchmark-secret-key-base-for-testing-only
+    depends_on:
+      postgres:
+        condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: "2"
+          memory: 2G
+
 volumes:
   postgres_data:
   redis_data:
